# gensphere-sdk-demo

./: .gitignore
example_agents/company_culture/: main.py  requirements.txt
example_agents/job-posting/: .env.example  main.py
example_agents/stock_price/: .env.example  main.py  requirements.txt
gensphere-python-sdk/: 0.41.1  app.py  combined.yaml  data_processing_flow.yaml  filtered_output.csv  function_schemas.py  functions.py  graph_builder.py  input_dataframe.csv  main.py  modified_dataframe.csv  pyproject.toml  sample.yaml  task_dag.yml  tools.py
gensphere-python-sdk/gensphere_python_sdk/: AgenticFlow.py  AgenticFlowThreading.py  __init__.py  genpod_autogen.py  genpod_crewai.py  logging_config.py
gensphere-python-sdk/gensphere_python_sdk/AgenticFlow/: AgenticFlow.py  AgenticFlowThreading.py  yml_compose.py
gensphere-python-sdk/gensphere_python_sdk/GenFlow/: GenFlow.py  README.md  yml_compose.py
